--- a/.github/workflows/analyze-backlog-health.yml
+++ b/.github/workflows/analyze-backlog-health.yml
@@ -8,6 +8,9 @@ on:
       - '.github/scripts/analyze_hierarchy.py'
       - '.github/workflows/backloghealth.yml'
 
+permissions:
+  contents: write
+
 jobs:
   backlog-health:
     runs-on: ubuntu-latest
@@ -43,8 +46,19 @@ jobs:
           cat backloghealth/hierarchy_violations.md >> $GITHUB_STEP_SUMMARY
 
       - name: Commit and push Markdown report to repo
-        uses: stefanzweifel/git-auto-commit-action@v5
-        with:
-          commit_message: "Update backloghealth hierarchy violations markdown report [automated]"
-          file_pattern: backloghealth/hierarchy_violations.md
-          branch: main
+        env:
+          GIT_AUTHOR_NAME: github-actions[bot]
+          GIT_AUTHOR_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
+          GIT_COMMITTER_NAME: github-actions[bot]
+          GIT_COMMITTER_EMAIL: 41898282+github-actions[bot]@users.noreply.github.com
+          GH_TOKEN: ${{ secrets.MILESTONE_SYNC }}
+        run: |
+          git config user.name "${GIT_AUTHOR_NAME}"
+          git config user.email "${GIT_AUTHOR_EMAIL}"
+          git add backloghealth/hierarchy_violations.md
+          if git diff --cached --quiet; then
+            echo "No changes to commit."
+            exit 0
+          fi
+          git commit -m "Update backloghealth hierarchy violations markdown report [automated]"
+          git push https://x-access-token:${GH_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:main
