--- a/.github/workflows/consolidate_burndown.yml
+++ b/.github/workflows/consolidate_burndown.yml
@@ -28,7 +28,6 @@ jobs:
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git add burndown_facts.csv
+          git add agilereportingmetadata/burndown_facts.csv
           git commit -m "Update burndown facts [skip ci]" || echo "No changes to commit"
-          # Use a personal access token if pushing to a protected branch
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
