--- a/.github/workflows/consolidate_burndown.yml
+++ b/.github/workflows/consolidate_burndown.yml
@@ -2,8 +2,8 @@ name: Consolidate burndown facts
 
 on:
   schedule:
-    - cron: '0 11 * * *'   # 11:00 UTC = 6:00 AM Central Time
-  workflow_dispatch:        # Allows manual run from Actions tab
+    - cron: '0 11 * * *'
+  workflow_dispatch:
 
 jobs:
   consolidate:
@@ -19,15 +19,9 @@ jobs:
       - name: Install pandas
         run: pip install pandas
 
-      - name: Run consolidation script
-        run: python .github/scripts/consolidate_github_snapshots.py
-
-      - name: Commit and push results
+      - name: Run consolidation script with custom token
         env:
-          GITHUB_TOKEN: ${{ secrets.MILESTONE_SYNC }}
-        run: |
-          git config --global user.name 'github-actions[bot]'
-          git config --global user.email '41898282+github-actions[bot]@users.noreply.github.com'
-          git add agilereportingmetadata/burndown_facts.csv
-          git commit -m "Update burndown facts [skip ci]" || echo "No changes to commit"
-          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${GITHUB_REPOSITORY}.git HEAD:${GITHUB_REF#refs/heads/}
+          CUSTOM_GITHUB_TOKEN: ${{ secrets.MILESTONE_SYNC }} # <-- your custom PAT secret
+          GITHUB_REPOSITORY: ${{ github.repository }}
+          GITHUB_REF: ${{ github.ref }}
+        run: python .github/scripts/consolidate_github_snapshots.py
