--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,5 +2,5 @@
   "name": "Default Codespaces Python DevContainer",
   "image": "mcr.microsoft.com/devcontainers/python:3.11",
   "features": {},
-  "postCreateCommand": "pip install -r requirements.txt"
+  "postCreateCommand": "sudo apt-get update && sudo apt-get install -y micro && pip install -r requirements.txt"
 }
